# eNRG-XPS

./: .gitignore  README.md  pyproject.toml  xps_ic_original.ipynb
src/enrg_xps/: __init__.py  discretization.py  hamiltonian.py  hamiltonian_imp.py  linalg.py  params.py  projection.py  spectra.py  spectra_imp.py  testbench_base.py  testbench_imp.py  utils.py
