[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "enrg-xps"
version = "0.1.0"
description = "eNRG XPS"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]
